contrib/kubernetes/2023-12-21-cfek8s-exported/cfengine-hub-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"cfengine-hub","namespace":"cfengine"},"spec":{"externalIPs":["192.168.1.239"],"ports":[{"name":"cfengine-hub-http","port":80},{"name":"cfengine-hub-https","port":443}],"selector":{"app":"cfengine-hub"}}}
  creationTimestamp: "2023-12-21T17:35:10Z"
  name: cfengine-hub
  namespace: cfengine
  resourceVersion: "21754"
  uid: dbc5834e-c913-4903-b129-dfe00829cf04
spec:
  clusterIP: 10.43.139.70
  clusterIPs:
  - 10.43.139.70
  externalIPs:
  - 192.168.1.239
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: cfengine-hub-http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: cfengine-hub-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: cfengine-hub
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
