contrib/kubernetes/2023-12-21-cfek8s-exported/cfengine-hub-statefulset.yml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"name":"cfengine-hub","namespace":"cfengine"},"spec":{"minReadySeconds":10,"replicas":1,"selector":{"matchLabels":{"app":"cfengine-hub"}},"serviceName":"cfengine-hub","template":{"metadata":{"labels":{"app":"cfengine-hub"}},"spec":{"affinity":{"nodeAffinity":{"requiredDuringSchedulingIgnoredDuringExecution":{"nodeSelectorTerms":[{"matchExpressions":[{"key":"kubernetes.io/arch","operator":"In","values":["amd64"]}]}] [...]
    creationTimestamp: "2023-12-21T17:46:27Z"
    generation: 1
    name: cfengine-hub
    namespace: cfengine
    resourceVersion: "22206"
    uid: 58568124-b4a2-4326-ad85-b88b4d4f8a1a
  spec:
    minReadySeconds: 10
    persistentVolumeClaimRetentionPolicy:
      whenDeleted: Retain
      whenScaled: Retain
    podManagementPolicy: OrderedReady
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: cfengine-hub
    serviceName: cfengine-hub
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: cfengine-hub
      spec:
        affinity:
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                  - amd64
        containers:
        - image: localhost:5000/cfengine-server:latest
          imagePullPolicy: Always
          name: hub
          ports:
          - containerPort: 443
            protocol: TCP
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    updateStrategy:
      rollingUpdate:
        partition: 0
      type: RollingUpdate
  status:
    availableReplicas: 1
    collisionCount: 0
    currentReplicas: 1
    currentRevision: cfengine-hub-5c5544cfb7
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updateRevision: cfengine-hub-5c5544cfb7
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
